como guardar os valores?

--- a/index.html
+++ b/index.html
@@ -12,33 +12,35 @@
         <input type="text" id="ecrã" name="ecrã" size="20"></input>
     </div>
     <p></p>
-    <div>
-        <button class="numero">7</button>
-        <button class="numero">8</button>
-        <button class="numero">9</button>
-        <button class="operador">/</button>
-        <button>Apagar</button>
-    </div>
-    <p></p>
-    <div>
-        <button class="numero">4</button>
-        <button class="numero">5</button>
-        <button class="numero">6</button>
-        <button class="operador">X</button>
-    </div>
-    <p></p>
-    <div>
-        <button class="numero">1</button>
-        <button class="numero">2</button>
-        <button class="numero">3</button>
-        <button class="operador">-</button>
-    </div>
-    <p></p>
-    <div>
-        <button class="numero">0</button>
-        <button>.</button>
-        <button>=</button>
-        <button class="operador">+</button>
+    <div id="teclado">
+        <div>
+            <button id="n7">7</button>
+            <button id="n8">8</button>
+            <button id="n9">9</button>
+            <button id="divi">/</button>
+            <button id="apagar">Apagar</button>
+        </div>
+        <p></p>
+        <div>
+            <button id="n4">4</button>
+            <button id="n5">5</button>
+            <button id="n6">6</button>
+            <button id="multi">X</button>
+        </div>
+        <p></p>
+        <div>
+            <button id="n1">1</button>
+            <button id="n2">2</button>
+            <button id="n3">3</button>
+            <button id="sub">-</button>
+        </div>
+        <p></p>
+        <div>
+            <button id="n0">0</button>
+            <button>.</button>
+            <button id="igual">=</button>
+            <button id="soma">+</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
